新增座標點

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>放上你的地圖</title>
+    <title>新增座標點</title>
     <script src="https://cesium.com/downloads/cesiumjs/releases/1.120/Build/Cesium/Cesium.js"></script>
     <link
       href="https://cesium.com/downloads/cesiumjs/releases/1.120/Build/Cesium/Widgets/widgets.css"
@@ -28,7 +28,20 @@
     <div id="cesiumContainer"></div>
     <script>
       // 創建Cesium Viewer實例
-      var viewer = new Cesium.Viewer("cesiumContainer");
+      var viewer = new Cesium.Viewer("cesiumContainer",{
+        animation: false,
+        timeline: false,
+        infoBox: false, // 隱藏信息框
+        selectionIndicator: false, // 隱藏選擇指示器
+        navigationHelpButton: false, // 隱藏導航幫助按鈕
+        geocoder: false, // 隱藏地理編碼搜尋框
+        homeButton: false, // 隱藏首頁按鈕
+        sceneModePicker: false, // 隱藏2D/3D切換按鈕
+        baseLayerPicker: false, // 隱藏圖層選擇器
+        fullscreenButton: false, // 隱藏全螢幕按鈕
+        vrButton: false, // 隱藏VR模式按鈕
+        creditsDisplay: false, // 隱藏版權信息
+      });
 
       // 添加WMTS圖層
       viewer.imageryLayers.addImageryProvider(
@@ -43,8 +56,20 @@
       // 設定視角到台灣
       // 在 CesiumJS 中，攝像機的高度並不像 OpenLayers 那樣直接使用縮放級別（zoom level）的概念，但可以通過計算來模擬這種效果。這涉及將縮放級別轉換為對應的高度。
       viewer.camera.setView({
-        destination: Cesium.Cartesian3.fromDegrees(121.5, 25, 150000.0), // 設置初始視角，經度、緯度、高度(km)，所以如果要像openlayers有zoom的感覺需要自己設定in out的公里數
+        destination: Cesium.Cartesian3.fromDegrees(121, 23.5, 800000.0), // 設置初始視角，經度、緯度、高度(km)，所以如果要像openlayers有zoom的感覺需要自己設定in out的公里數
       });
+
+      // 新增一個點
+      const point = viewer.entities.add({
+            position: Cesium.Cartesian3.fromDegrees(121, 23, 0),
+            point: {
+                pixelSize: 10,
+                color: Cesium.Color.RED,
+                outlineColor: Cesium.Color.WHITE,
+                outlineWidth: 2
+            },
+        });
+
     </script>
   </body>
 </html>
