--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
       // 新增一個點
       const point = viewer.entities.add({
-            position: Cesium.Cartesian3.fromDegrees(121, 23, 0),
+            position: Cesium.Cartesian3.fromDegrees(121, 23, 0), // 經度 121 度、緯度 23 度、高度 0 公尺，這一這邊是公尺
             point: {
                 pixelSize: 10,
                 color: Cesium.Color.RED,
