--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
     <div id="cesiumContainer"></div>
     <script>
       // 創建Cesium Viewer實例
-      var viewer = new Cesium.Viewer("cesiumContainer", {
-        // terrainProvider: Cesium.createWorldTerrain(), // 加载全球地形
-        imageryProvider: false, // 关闭默认的影像图层
+      let viewer = new Cesium.Viewer("cesiumContainer", {
+        // terrainProvider: Cesium.createWorldTerrain(), // 加入全球地形
+        imageryProvider: false, // 關閉默認的影像圖層
         animation: false,
         timeline: false,
         infoBox: false, // 隱藏信息框
@@ -59,23 +59,29 @@
         destination: Cesium.Cartesian3.fromDegrees(120.9, 23.7, 800000.0),
       });
 
-      // 加載 KML 文件
-      Cesium.KmlDataSource.load("20240821雪山北峰單攻.kml")
-        .then(function (dataSource) {
-          viewer.dataSources.add(dataSource);
-        })
-        .catch(function (error) {
-          console.log("KML 加載失敗:", error);
+      // 繪製線段的函數
+      function drawLine(point1, point2) {
+        viewer.entities.add({
+          polyline: {
+            positions: Cesium.Cartesian3.fromDegreesArray([ // Cartesian3 用於表示三維空間中的點或向量。這個類的名稱源於笛卡爾坐標系（Cartesian Coordinate System），其中每個點由三個數值來定義：x、y 和 z。這些數值通常對應於三維空間中的位置或方向。
+              point1.longitude,
+              point1.latitude,
+              point2.longitude,
+              point2.latitude,
+            ]),
+            width: 5, // 線段的寬度
+            material: Cesium.Color.RED, // 線段的顏色
+          },
         });
+      }
 
-      // 加載 GPX 文件
-      Cesium.GpxDataSource.load("浸水營.gpx")
-        .then(function (dataSource) {
-          viewer.dataSources.add(dataSource);
-        })
-        .catch(function (error) {
-          console.log("GPX 加載失敗:", error);
-        });
+      // 假設使用者提供的兩個點
+      let point1 = { longitude: 120.9, latitude: 23.7 };
+      let point2 = { longitude: 121.0, latitude: 23.8 };
+
+      // 呼叫函數來繪製線段
+      drawLine(point1, point2);
     </script>
   </body>
 </html>
+  
